--- a/backend/package.json
+++ b/backend/package.json
@@ -84,5 +84,10 @@
       "prettier --write",
       "eslint --fix --max-warnings=0"
     ]
+  },
+  "engines": {
+    "node": ">=20",
+    "yarn": ">=1.22",
+    "npm": "please-use-yarn"
   }
 }
