--- a/.github/workflows/backend-dev.yml
+++ b/.github/workflows/backend-dev.yml
@@ -27,6 +27,7 @@ jobs:
         with:
           node-version-file: .nvmrc
           cache: yarn
+          cache-dependency-path: '**/yarn.lock'
 
       - name: Cache dependencies
         uses: actions/cache@v3
