--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,8 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:staging": "NODE_ENV=staging pm2 start dist/main",
-    "start:prod": "NODE_ENV=production pm2 start dist/main",
+    "start:staging": "NODE_ENV=staging pm2 start dist/main.js --name emr-server.dev",
+    "start:prod": "NODE_ENV=production pm2 start dist/main.js --name emr-server.prod",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
