--- a/.github/workflows/backend-prod.yml
+++ b/.github/workflows/backend-prod.yml
@@ -40,6 +40,7 @@ jobs:
       - name: Create .env file
         run: |
           touch ${{ env.ENV_PATH }}
+          echo PORT=${{ secrets.PORT }} >> ${{ env.ENV_PATH }}
           echo DB_HOST=${{ secrets.DB_HOST }} >> ${{ env.ENV_PATH }}
           echo DB_PORT=${{ secrets.DB_PORT }} >> ${{ env.ENV_PATH }}
           echo DB_USERNAME=${{ secrets.DB_USERNAME }} >> ${{ env.ENV_PATH }}
