--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "cache-manager-redis-yet": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.6",
     "express-basic-auth": "^1.2.1",
     "mysql2": "^3.9.7",
     "passport": "^0.7.0",
@@ -51,6 +52,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/testing": "^10.0.0",
+    "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
