--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "lint-staged": "lint-staged"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.598.0",
     "@nestjs/cache-manager": "^2.2.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
@@ -55,6 +56,7 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
     "@types/passport-http": "^0.3.11",
     "@types/passport-jwt": "^4.0.1",
