--- a/.github/workflows/backend-dev.yml
+++ b/.github/workflows/backend-dev.yml
@@ -55,6 +55,10 @@ jobs:
           echo SWAGGER_PASSWORD=${{ secrets.SWAGGER_PASSWORD }} >> ${{ env.ENV_PATH }}
           echo ACCESS_TOKEN_EXPIRE_SECONDS=${{ secrets.ACCESS_TOKEN_EXPIRE_SECONDS }} >> ${{ env.ENV_PATH }}
           echo REFRESH_TOKEN_EXPIRE_SECONDS=${{ secrets.REFRESH_TOKEN_EXPIRE_SECONDS }} >> ${{ env.ENV_PATH }}
+          echo AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} >> ${{ env.ENV_PATH }}
+          echo AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} >> ${{ env.ENV_PATH }}
+          echo AWS_S3_IMAGE_BUCKET_NAME=${{ secrets.AWS_S3_IMAGE_BUCKET_NAME }} >> ${{ env.ENV_PATH }}
+          echo AWS_S3_REGION=${{ secrets.AWS_S3_REGION }} >> ${{ env.ENV_PATH }}
           cat ${{ env.ENV_PATH }}
 
       - name: Install Dependencies
@@ -75,10 +79,10 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-northeast-2
+          aws-region: ${{ secrets.AWS_S3_REGION }}
 
       - name: Upload to S3
-        run: aws s3 cp --region ap-northeast-2 ./dev.zip s3://${{ secrets.AWS_S3_BUCKET_NAME }}/dev.zip
+        run: aws s3 cp --region ${{ secrets.AWS_S3_REGION }} ./dev.zip s3://${{ secrets.AWS_S3_BUCKET_NAME }}/dev.zip
 
       - name: Deploy to EC2 with CodeDeploy
         run: aws deploy create-deployment
