--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -7,3 +7,5 @@ services:
     ports:
       - "${REDIS_BINDING_PORT}:${REDIS_PORT}"
     command: redis-server --requirepass ${REDIS_PASSWORD}
+    environment:
+      - TZ=Asia/Seoul
